--- a/blog/templates/blog/all_posts.html
+++ b/blog/templates/blog/all_posts.html
@@ -5,7 +5,7 @@
 
   <section class="jumbotron text-center">
     <div class="container">
-      <h1>Album example</h1>
+      <h1>Posts</h1>
       <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
       <p>
         <a href="#" class="btn btn-primary my-2">Main call to action</a>
@@ -24,7 +24,7 @@
           <div class="card mb-4 shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             <div class="card-body">
-              <h3 class="fw-normal">{{ Post.Title }}</h3>
+              <h3 class="fw-normal"><i class="fa-solid fa-terminal"></i>{{ Post.Title }}</h3>
               <p class="card-text">{{ Post.Description }}</p>
               <p class="card-text">{{ Post.Author }}</p>
               <div class="d-flex justify-content-between align-items-center">
