--- a/blog/templates/blog/all_posts.html
+++ b/blog/templates/blog/all_posts.html
@@ -5,8 +5,13 @@
 
   <section class="jumbotron text-center">
     <div class="container">
-      <h1>Posts</h1>
-      <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+      <h1>Paradise</h1>
+      <figure class="text-center">
+        <blockquote class="blockquote">
+          <p class="lead text-muted">“We all have a thirst for wonder. It's a deeply human quality. Science and religion are both bound up with it. What I'm saying is, you don't have to make stories up, you don't have to exaggerate. There's wonder and awe enough in the real world. Nature's a lot better at inventing wonders than we are.”</p>
+        </blockquote>
+        <figcaption class="blockquote-footer">Carl Sagan, <cite title="Source Title">Contact</cite></figcaption>
+      </figure>
       <p>
         <a href="#" class="btn btn-primary my-2">Main call to action</a>
         <a href="#" class="btn btn-secondary my-2">Secondary action</a>
