--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,6 +9,8 @@
     <style>
         body{
             font-family: 'Tiro Devanagari Sanskrit', serif; font-family: 'Outfit', sans-serif;
+            line-height: 25px;
+            font-size: 25px;
         }
     </style>
 </head>
