--- a/blog/templates/blog/all_posts.html
+++ b/blog/templates/blog/all_posts.html
@@ -25,16 +25,18 @@
       <div class="row">
 
       {% for Post in posts %}
+
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
+            <img src=""/>
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             <div class="card-body">
-              <h3 class="fw-normal"><i class="fa-solid fa-terminal"></i>{{ Post.Title }}</h3>
+              <h3 class="card-title"><i class="fa-solid fa-terminal"></i>{{ Post.Title }}</h3>
               <p class="card-text">{{ Post.Description }}</p>
               <p class="card-text">{{ Post.Author }}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <a href="{% url 'blog:single_post' Post.pk %}"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                 </div>
                 <small class="text-muted">{{Post.Date}}</small>
               </div>
