--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,6 +13,7 @@
             line-height: 25px;
             font-size: 25px;
         }
+
     </style>
 </head>
 <body>
@@ -24,15 +26,12 @@
   <div class="collapse navbar-collapse" id="navbarsExample02">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/blog"><i class="fa-solid fa-house-chimney"></i>Home</a>
+        <a class="nav-link" href="/"><i class="fa-solid fa-house-chimney"></i>Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/blog/posts"><i class="fa-solid fa-book"></i>Posts</a>
+        <a class="nav-link" href="/posts"><i class="fa-solid fa-book"></i>Posts</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-md-0">
-      <input class="form-control" type="text" placeholder="Search">
-    </form>
   </div>
 </nav>
     {% block content %}
