--- a/blog/templates/blog/all_posts.html
+++ b/blog/templates/blog/all_posts.html
@@ -1,6 +1,7 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+
     <main role="main">
 
   <section class="jumbotron text-center">
@@ -13,8 +14,10 @@
         <figcaption class="blockquote-footer">Carl Sagan, <cite title="Source Title">Contact</cite></figcaption>
       </figure>
       <p>
+        <!--
         <a href="#" class="btn btn-primary my-2">Main call to action</a>
         <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+        -->
       </p>
     </div>
   </section>
@@ -25,15 +28,14 @@
       <div class="row">
 
       {% for Post in posts %}
-
+        {% load static %}
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <img src=""/>
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            <img src="{% static Post.Image %}" alt="image" width="100%" height="225"/>
             <div class="card-body">
               <h3 class="card-title"><i class="fa-solid fa-terminal"></i>{{ Post.Title }}</h3>
-              <p class="card-text">{{ Post.Description }}</p>
-              <p class="card-text">{{ Post.Author }}</p>
+              <p class="text-muted"><em>{{ Post.Description }}</em></p>
+              <p class="card-text"><em>{{ Post.Author }}</em></p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="{% url 'blog:single_post' Post.pk %}"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
