--- a/blog/templates/blog/single_post.html
+++ b/blog/templates/blog/single_post.html
@@ -6,7 +6,7 @@
   <div class="row">
     <div class="col-md-8 blog-main">
       <hr>
-      <img src="{% static post.Image %}"/>
+      <img src="{% static post.Image %}" height="500px"/>
       <hr>
 
       <div class="blog-post">
@@ -35,6 +35,6 @@
     </aside><!-- /.blog-sidebar -->
 
   </div><!-- /.row -->
-
+  </div>
 </main>
 {% endblock %}
