a lot of index page stuff

--- a/blog/templates/blog/all_posts.html
+++ b/blog/templates/blog/all_posts.html
@@ -4,9 +4,12 @@
 
     <main role="main">
 
-  <section class="jumbotron text-center">
+  <section class="jumbotron text-center bg-image" style="
+      background-image: url('../static/wp2284591-spacex-wallpapers.jpg');
+      height: 400px;
+  ">
     <div class="container">
-      <h1>Paradise</h1>
+      <h1 style="color: white">Tacos on Mars Blog</h1>
       <figure class="text-center">
         <blockquote class="blockquote">
           <p class="lead text-muted">“We all have a thirst for wonder. It's a deeply human quality. Science and religion are both bound up with it. What I'm saying is, you don't have to make stories up, you don't have to exaggerate. There's wonder and awe enough in the real world. Nature's a lot better at inventing wonders than we are.”</p>
