--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand navbar-dark bg-dark">
-  <a class="navbar-brand" href=""><i class="fa-solid fa-earth-americas"></i>Paradise</a>
+  <a class="navbar-brand" href=""><h2><i class="fa-solid far fa-smile-wink"></i>Tacos on Mars</h2></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -29,7 +29,13 @@
         <a class="nav-link" href="/"><i class="fa-solid fa-house-chimney"></i>Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/posts"><i class="fa-solid fa-book"></i>Posts</a>
+        <a class="nav-link" href="/posts"><i class="fa-solid fa-book"></i>Blog</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="/posts"><i class="fa-solid fa-utensils"></i>Food</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="/posts"><i class="fa-solid fa-code"></i>Programming</a>
       </li>
     </ul>
   </div>
