--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand navbar-dark bg-dark">
+  <nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
   <a class="navbar-brand" href=""><h2><i class="fa-solid far fa-smile-wink"></i>Tacos on Mars</h2></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
