changed some images

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -4,6 +4,7 @@
 <style>
       #intro {
         background-image: url("../../static/wp2284591-spacex-wallpapers.jpg");
+        background-size: cover;
         height: 100vh;
       }
 
@@ -83,7 +84,7 @@
           <div class="col-lg-4 col-md-12 mb-4">
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                <img src="https://mdbootstrap.com/img/new/standard/nature/184.jpg" class="img-fluid" />
+                <img src="../../static/The_School_of_Athens_(cropped).jpg" class="img-fluid" />
                 <a href="#!">
                   <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
@@ -119,7 +120,7 @@
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                <img src="https://mdbootstrap.com/img/new/standard/nature/111.jpg" class="img-fluid" />
+                <img src="../../static/space_coding.PNG" class="img-fluid"/>
                 <a href="#!">
                   <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
