--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -55,19 +55,19 @@
 
     <div class="text-center py-4 align-items-center">
       <p>Follow MDB on social media</p>
-      <a href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA" class="btn btn-success m-1" role="button"
+      <a href="https://www.twitch.tv/h3its" class="btn btn-success m-1" role="button"
         rel="nofollow" target="_blank">
-        <i class="fab fa-youtube"></i>
+        <i class="fab fa-twitch"></i>
       </a>
-      <a href="https://www.facebook.com/mdbootstrap" class="btn btn-success m-1" role="button" rel="nofollow"
+      <a href="https://www.linkedin.com/in/eric-heitmann-36640b173" class="btn btn-success m-1" role="button" rel="nofollow"
         target="_blank">
-        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-linkedin"></i>
       </a>
-      <a href="https://twitter.com/MDBootstrap" class="btn btn-success m-1" role="button" rel="nofollow"
+      <a href="https://twitter.com/HeitsSoftware" class="btn btn-success m-1" role="button" rel="nofollow"
         target="_blank">
         <i class="fab fa-twitter"></i>
       </a>
-      <a href="https://github.com/mdbootstrap/mdb-ui-kit" class="btn btn-success m-1" role="button" rel="nofollow"
+      <a href="https://github.com/h3its" class="btn btn-success m-1" role="button" rel="nofollow"
         target="_blank">
         <i class="fab fa-github"></i>
       </a>
