more and more html stuff

--- a/blog/templates/blog/all_posts.html
+++ b/blog/templates/blog/all_posts.html
@@ -5,7 +5,7 @@
     <main role="main">
 
   <section class="jumbotron text-center bg-image" style="
-      background-image: url('../../static/wp2284591-spacex-wallpapers.jpg');
+      background-image: url('../../static/space-socrates.jpg');
       height: 400px;
   ">
     <div class="container">
