--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -3,9 +3,9 @@
 {% block content %}
 <style>
       #intro {
-        background-image: url("../../static/wp2284591-spacex-wallpapers.jpg");
+        background-image: url("../../static/emerald(index).jpg");
         background-size: cover;
-        height: 100vh;
+        height: 66vh;
       }
 
       /* Height for devices larger than 576px */
@@ -27,9 +27,6 @@
       <div class="mask" style="background-color: rgba(0, 0, 0, 0.8);">
         <div class="container d-flex align-items-center justify-content-center text-center h-100">
           <div class="text-white">
-            <br>
-            <br>
-            <br>
             <h2 class="mb-4">"Tacos on Mars?"</h2>
             <a class="btn btn-outline-light btn-lg m-2" href="https://www.youtube.com/watch?v=c9B4TPnak1A" role="button"
               rel="nofollow" target="_blank">Read the short story here</a>
@@ -40,7 +37,7 @@
     <!-- Background image -->
   </header>
   <!--Main Navigation-->
-
+  <hr class="my-4" />
   <!--Main layout-->
   <main class="mt-5">
     <div class="container">
@@ -57,17 +54,19 @@
           </div>
 
           <div class="col-md-6 gx-5 mb-4">
-            <h4><strong>Who we are</strong></h4>
+            <h4><strong>Ab Initio</strong></h4>
             <p class="text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod itaque voluptate
-              nesciunt laborum incidunt. Officia, quam consectetur. Earum eligendi aliquam illum
-              alias, unde optio accusantium soluta, iusto molestiae adipisci et?
+              Good morning! This website was created for use by a college computer science
+              student to practice web development, as well as teach and document progress
+              along the way. This website will continue to grow and develop as it grows.
+              <br>
+              <em>Per Audacia ad Astra!</em>
             </p>
-            <p><strong>Doloremque vero ex debitis veritatis?</strong></p>
+            <p><strong>Quid Intus</strong></p>
             <p class="text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod itaque voluptate
-              nesciunt laborum incidunt. Officia, quam consectetur. Earum eligendi aliquam illum
-              alias, unde optio accusantium soluta, iusto molestiae adipisci et?
+              Throughout <em>Tacos on Mars</em> you will find Programming Tutorials simple
+              enough for anyone to follow (and me to make), food recipes that are as
+              <em>exquisito</em> as they are easy to make.
             </p>
           </div>
         </div>
@@ -84,7 +83,7 @@
           <div class="col-lg-4 col-md-12 mb-4">
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                <img src="../../static/The_School_of_Athens_(cropped).jpg" class="img-fluid" />
+                <img src="../../static/space-socrates.jpg" class="img-fluid" />
                 <a href="#!">
                   <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
@@ -102,7 +101,7 @@
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                <img src="https://mdbootstrap.com/img/new/standard/nature/023.jpg" class="img-fluid" />
+                <img src="../../static/tacos.jpg" class="img-fluid" />
                 <a href="#!">
                   <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
@@ -110,7 +109,8 @@
               <div class="card-body">
                 <h5 class="card-title">Recipes</h5>
                 <p class="card-text">
-                  If a college kid can make them, so can you.
+                  Recipes that don't require you to scroll through a life story to make...
+                  also they're pretty good.
                 </p>
                 <a href="#!" class="btn btn-info">Button</a>
               </div>
