--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -58,15 +58,17 @@
             <p class="text-muted">
               Good morning! This website was created for use by a college computer science
               student to practice web development, as well as teach and document progress
-              along the way. This website will continue to grow and develop as it grows.
+              along the way. This website will continue to grow and develop as I learn.
               <br>
               <em>Per Audacia ad Astra!</em>
             </p>
             <p><strong>Quid Intus</strong></p>
             <p class="text-muted">
               Throughout <em>Tacos on Mars</em> you will find Programming Tutorials simple
-              enough for anyone to follow (and me to make), food recipes that are as
-              <em>exquisito</em> as they are easy to make.
+              enough for anyone to follow (and me to write), food recipes that are as
+              <em>exquisito</em> as they are easy to make. In the blog section you will
+              find discussions written by multiple authors on various subjects you may
+              find interesting.
             </p>
           </div>
         </div>
