--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,12 +17,8 @@
     </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href=""><h2><i class="fa-solid far fa-smile-wink"></i>Tacos on Mars</h2></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
+  <nav class="navbar navbar-expand navbar-dark fixed-top" style="background-color: #191919">
+  <a class="navbar-brand" href=""><img src="../../static/logo(transparent)%20(2).png" width="40" height="40"/>Tacos on Mars</a>
   <div class="collapse navbar-collapse" id="navbarsExample02">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
