--- a/blog/templates/blog/all_posts.html
+++ b/blog/templates/blog/all_posts.html
@@ -4,8 +4,14 @@
 
     <main role="main">
 
+      <div class="bg-image justify-content-center" style="background-image: url('../../static/warhol(cropped-banner).jpg');
+        background-size: cover;
+        height: 66vh;
+      ">
+    </div>
+  <!--
   <section class="jumbotron text-center bg-image" style="
-      background-image: url('../../static/space-socrates.jpg');
+      background-image: url('../../static/warhol-athens.jpg');
       height: 400px;
   ">
     <div class="container">
@@ -16,16 +22,10 @@
         </blockquote>
         <figcaption class="blockquote-footer">Carl Sagan, <cite title="Source Title">Contact</cite></figcaption>
       </figure>
-      <p>
-        <!--
-        <a href="#" class="btn btn-primary my-2">Main call to action</a>
-        <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-        -->
-      </p>
     </div>
   </section>
-
-  <div class="album py-5 bg-light">
+  -->
+  <div class="album py-5" style="background-color: #191919">
     <div class="container">
 
       <div class="row">
@@ -33,11 +33,11 @@
       {% for Post in posts %}
         {% load static %}
         <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
+          <div class="card mb-4">
             <img src="{% static Post.Image %}" alt="image" width="100%" height="225"/>
             <div class="card-body">
-              <h3 class="card-title"><i class="fa-solid fa-terminal"></i>{{ Post.Title }}</h3>
-              <p class="text-muted"><em>{{ Post.Description }}</em></p>
+              <h3 class="card-title">{{ Post.Title }}</h3>
+              <p class="text-muted">{{ Post.Description }}</p>
               <p class="card-text"><em>{{ Post.Author }}</em></p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
