--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -18,9 +18,9 @@
 </head>
 <body>
   <nav class="navbar navbar-expand navbar-dark fixed-top" style="background-color: #191919">
-  <a class="navbar-brand" href=""><img src="../../static/logo(transparent)%20(2).png" width="40" height="40"/>Tacos on Mars</a>
+  <a class="navbar-brand" href=""><img src="../../static/logo(transparent)%20(2).png" width="40" height="40" style="margin-right: 5px"/>Tacos on Mars</a>
   <div class="collapse navbar-collapse" id="navbarsExample02">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav ">
       <li class="nav-item">
         <a class="nav-link" href="/"><i class="fa-solid fa-house-chimney"></i>Home</a>
       </li>
@@ -40,17 +40,8 @@
 
     {% endblock %}
 <footer class="bg-light text-lg-start">
-    <div class="py-4 text-center">
-      <a role="button" class="btn btn-dark btn-lg m-2"
-        href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA" rel="nofollow" target="_blank">
-        About Us
-      </a>
-    </div>
-
-    <hr class="m-0" />
-
-    <div class="text-center py-4 align-items-center">
-      <p>Follow MDB on social media</p>
+    <div class="text-center text-light py-4 align-items-center" style="background-color: #191919">
+      <p>Follow on social media</p>
       <a href="https://www.twitch.tv/h3its" class="btn btn-success m-1" role="button"
         rel="nofollow" target="_blank">
         <i class="fab fa-twitch"></i>
@@ -70,9 +61,12 @@
     </div>
 
     <!-- Copyright -->
-    <div class="text-center text-secondary p-3 bg-dark" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2022 Copyright: https://github.com/h3its
-      <a class="text-dark" href="https://mdbootstrap.com/"></a>
+    <div class="text-center text-secondary p-3" style="background-color: #191919">
+      <a class="text-light" href="https://github.com/h3its">©2022 Copyright: https://github.com/h3its</a>
+        <a role="button" class="btn btn-dark btn-lg m-2"
+        href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA" rel="nofollow" target="_blank">
+        About Us
+      </a>
     </div>
     <!-- Copyright -->
   </footer>
