--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -11,23 +11,21 @@
       /* Height for devices larger than 576px */
       @media (min-width: 992px) {
         #intro {
-          margin-top: -58.59px;
+          margin-top: 60px;
         }
       }
 
-      .navbar .nav-link {
-        color: #fff !important;
-      }
     </style>
 
 
 
     <!-- Background image -->
     <div id="intro" class="bg-image shadow-2-strong">
-      <div class="mask" style="background-color: rgba(0, 0, 0, 0.8);">
+      <div class="mask" >
         <div class="container d-flex align-items-center justify-content-center text-center h-100">
           <div class="text-white">
-            <h2 class="mb-4">"Tacos on Mars?"</h2>
+            <br>
+            <h1 class="mb-4">"Tacos on Mars?"</h1>
             <a class="btn btn-outline-light btn-lg m-2" href="https://www.youtube.com/watch?v=c9B4TPnak1A" role="button"
               rel="nofollow" target="_blank">Read the short story here</a>
           </div>
@@ -95,7 +93,7 @@
                 <p class="card-text">
                   Coding, stories, philosophies, and everything in between.
                 </p>
-                <a href="#!" class="btn btn-info">Button</a>
+                <a href="#!" class="btn btn-info">Visit</a>
               </div>
             </div>
           </div>
@@ -114,7 +112,7 @@
                   Recipes that don't require you to scroll through a life story to make...
                   also they're pretty good.
                 </p>
-                <a href="#!" class="btn btn-info">Button</a>
+                <a href="#!" class="btn btn-info">Visit</a>
               </div>
             </div>
           </div>
@@ -132,7 +130,7 @@
                 <p class="card-text">
                   Anything is possible with a little code and a lot of luck.
                 </p>
-                <a href="#!" class="btn btn-info">Button</a>
+                <a href="#!" class="btn btn-info">Visit</a>
               </div>
             </div>
           </div>
