lots of ui stuff, need to fix black bar

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -20,9 +20,9 @@
 
 
     <!-- Background image -->
-    <div id="intro" class="bg-image shadow-2-strong">
-      <div class="mask" >
-        <div class="container d-flex align-items-center justify-content-center text-center h-100">
+    <div id="intro" class="bg-image">
+      <div class="mask">
+        <div class="container d-flex align-items-center justify-content-center">
           <div class="text-white">
             <br>
             <h1 class="mb-4">"Tacos on Mars?"</h1>
@@ -35,22 +35,13 @@
     <!-- Background image -->
   </header>
   <!--Main Navigation-->
-  <hr class="my-4" />
   <!--Main layout-->
-  <main class="mt-5">
+  <main class="mt-5 bg-light">
     <div class="container">
       <!--Section: Content-->
       <section>
         <div class="row">
-          <div class="col-md-6 gx-5 mb-4">
-            <div class="bg-image hover-overlay ripple shadow-2-strong rounded-5" data-mdb-ripple-color="light">
-              <img src="../../static/Small-rocket-launch.PNG" class="img-fluid"/>
-              <a href="#!">
-                <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-              </a>
-            </div>
-          </div>
-
+          <img src="../../static/Small-rocket-launch.PNG" class="img-fluid"/>
           <div class="col-md-6 gx-5 mb-4">
             <h4><strong>Ab Initio</strong></h4>
             <p class="text-muted">
