--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,6 +12,7 @@
             font-family: 'Tiro Devanagari Sanskrit', serif; font-family: 'Outfit', sans-serif;
             line-height: 25px;
             font-size: 25px;
+            background-color: #191919;
         }
 
     </style>
