--- a/blog/templates/blog/single_post.html
+++ b/blog/templates/blog/single_post.html
@@ -4,7 +4,7 @@
     {% load static %}
     <main role="main" class="container">
   <div class="row">
-    <div class="col-md-8 blog-main">
+    <div class="blog-main text-light">
       <hr>
       <img src="{% static post.Image %}" height="500px"/>
       <hr>
@@ -17,22 +17,6 @@
         <hr>
         <p> {{ post.Body }}</p>
     </div><!-- /.blog-main -->
-
-    <aside class="col-md-4 blog-sidebar">
-      <div class="p-4 mb-3 bg-light rounded">
-        <h4 class="font-italic">About the Author</h4>
-        <p class="mb-0">{{ post.Author.Bio }}</p>
-      </div>
-
-      <div class="p-4">
-        <h4 class="font-italic">Elsewhere</h4>
-        <ol class="list-unstyled">
-          <li><a href="#">GitHub</a></li>
-          <li><a href="#">Twitter</a></li>
-          <li><a href="#">Facebook</a></li>
-        </ol>
-      </div>
-    </aside><!-- /.blog-sidebar -->
 
   </div><!-- /.row -->
   </div>
