No more black bar :)

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -32,11 +32,9 @@
         </div>
       </div>
     </div>
-    <!-- Background image -->
-  </header>
-  <!--Main Navigation-->
+
   <!--Main layout-->
-  <main class="mt-5 bg-light">
+  <main  class="pt-5 bg-light">
     <div class="container">
       <!--Section: Content-->
       <section>
