rounded corners on image

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -39,7 +39,7 @@
       <!--Section: Content-->
       <section>
         <div class="row">
-          <img src="../../static/Small-rocket-launch.PNG" class="img-fluid"/>
+          <img src="../../static/Small-rocket-launch.PNG" class="img-fluid rounded"/>
           <div class="col-md-6 gx-5 mb-4">
             <h4><strong>Ab Initio</strong></h4>
             <p class="text-muted">
@@ -82,7 +82,7 @@
                 <p class="card-text">
                   Coding, stories, philosophies, and everything in between.
                 </p>
-                <a href="#!" class="btn btn-info">Visit</a>
+                <a href="/posts" class="btn btn-info">Visit</a>
               </div>
             </div>
           </div>
@@ -126,8 +126,6 @@
         </div>
       </section>
       <!--Section: Content-->
-
-      <hr class="my-5" />
 
 
     </div>
