fixed buttons and routing

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -62,10 +62,10 @@
     </div>
 
     <!-- Copyright -->
-    <div class="text-center text-secondary p-3" style="background-color: #191919">
+    <div class="text-center text-secondary" style="background-color: #191919">
       <a class="text-light" href="https://github.com/h3its">©2022 Copyright: https://github.com/h3its</a>
         <a role="button" class="btn btn-dark btn-lg m-2"
-        href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA" rel="nofollow" target="_blank">
+        href="/about" rel="nofollow" target="_blank">
         About Us
       </a>
     </div>
