--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -26,7 +26,7 @@
           <div class="text-white">
             <br>
             <h1 class="mb-4">"Tacos on Mars?"</h1>
-            <a class="btn btn-outline-light btn-lg m-2" href="https://www.youtube.com/watch?v=c9B4TPnak1A" role="button"
+            <a class="btn btn-outline-light btn-lg m-2" href="/about" role="button"
               rel="nofollow" target="_blank">Read the short story here</a>
           </div>
         </div>
@@ -119,7 +119,7 @@
                 <p class="card-text">
                   Anything is possible with a little code and a lot of luck.
                 </p>
-                <a href="#!" class="btn btn-info">Visit</a>
+                <a href="/programming" class="btn btn-info">Visit</a>
               </div>
             </div>
           </div>
