all recipe post page done

--- a/programming/templates/programming/all_programming_posts.html
+++ b/programming/templates/programming/all_programming_posts.html
@@ -19,7 +19,7 @@
                 <div class="btn-group">
                   <a href="{% url 'programming:single_programming_post' Programming_Post.pk %}"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                 </div>
-                <small class="text-muted">{{Post.Date}}</small>
+                <small class="text-muted">{{Programming_Post.Date}}</small>
               </div>
             </div>
           </div>
