--- a/recipes/templates/recipes/all_recipe_posts.html
+++ b/recipes/templates/recipes/all_recipe_posts.html
@@ -1,10 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h1>Hello World!</h1>
-</body>
-</html>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+<main role="main">
+        <div class="album py-5 mt-5" style="background-color: #191919">
+    <div class="container">
+
+      <div class="row">
+
+      {% for Recipe_Post in recipe_posts %}
+        {% load static %}
+        <div class="col-md-4">
+          <div class="card mb-4">
+              <img src="{% static Recipe_Post.Image %}" alt="image" width="100%" height="225"/>
+            <div class="card-body">
+              <h3 class="card-title">{{ Recipe_Post.Title }}</h3>
+              <p class="text-muted">{{ Recipe_Post.Description }}</p>
+              <p class="card-text"><em>{{ Recipe_Post.Author }}</em></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="{% url 'recipes:single_recipe_post' Recipe_Post.pk %}"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                </div>
+                <small class="text-muted">{{Recipe_Post.Date}}</small>
+              </div>
+            </div>
+          </div>
+        </div>
+      {% endfor %}
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+</main>
+
+{% endblock %}
