--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -27,7 +27,7 @@
         <a class="nav-link" href="/posts"><i class="fa-solid fa-book"></i>Blog</a>
       </li>
         <li class="nav-item">
-        <a class="nav-link" href="/posts"><i class="fa-solid fa-utensils"></i>Food</a>
+        <a class="nav-link" href="/recipes"><i class="fa-solid fa-utensils"></i>Food</a>
       </li>
         <li class="nav-item">
         <a class="nav-link" href="/programming"><i class="fa-solid fa-code"></i>Programming</a>
