i hope this doesn't screw anything up

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -101,7 +101,7 @@
                   Recipes that don't require you to scroll through a life story to make...
                   also they're pretty good.
                 </p>
-                <a href="#!" class="btn btn-info">Visit</a>
+                <a href="/recipes" class="btn btn-info">Visit</a>
               </div>
             </div>
           </div>
