--- a/recipes/templates/recipes/all_recipe_posts.html
+++ b/recipes/templates/recipes/all_recipe_posts.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <main role="main">
-        <div class="album py-5 mt-5" style="background-color: #191919">
+        <div class="album py-5 mt-5" style="background-color: white">
     <div class="container">
 
       <div class="row">
