--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -3,15 +3,15 @@
 {% block content %}
 <style>
       #intro {
-        background-image: url("../../static/emerald(index).jpg");
+        background-image: url("../../static/banners/Morning(banner).png");
         background-size: cover;
-        height: 66vh;
+        height: 55vh;
       }
 
       /* Height for devices larger than 576px */
       @media (min-width: 992px) {
         #intro {
-          margin-top: 60px;
+          margin-top: 50px;
         }
       }
 
@@ -21,16 +21,7 @@
 
     <!-- Background image -->
     <div id="intro" class="bg-image">
-      <div class="mask">
-        <div class="container d-flex align-items-center justify-content-center">
-          <div class="text-white">
-            <br>
-            <h1 class="mb-4">"Tacos on Mars?"</h1>
-            <a class="btn btn-outline-light btn-lg m-2" href="/about" role="button"
-              rel="nofollow" target="_blank">Read the short story here</a>
-          </div>
-        </div>
-      </div>
+        <p class="display-4 text-center p-5 text-light">This is a quote, there are many like it but this one is mine!</p>
     </div>
 
   <!--Main layout-->
