--- a/recipes/templates/recipes/all_recipe_posts.html
+++ b/recipes/templates/recipes/all_recipe_posts.html
@@ -2,7 +2,30 @@
 
 {% block content %}
 <main role="main">
-        <div class="album py-5 mt-5" style="background-color: white">
+  <style>
+      #intro {
+        background-image: url("../../static/Late-Evening-with-trucks(banner).png");
+        background-size: cover;
+        height: 55vh;
+      }
+
+      /* Height for devices larger than 576px */
+      @media (min-width: 992px) {
+        #intro {
+          margin-top: 50px;
+        }
+      }
+
+    </style>
+
+
+
+    <!-- Background image -->
+    <div id="intro" class="bg-image">
+        <p class="display-4 text-center p-5 text-light">This is a quote, there are many like it but this one is mine!</p>
+    </div>
+
+        <div class="album py-5 mt-5">
     <div class="container">
 
       <div class="row">
