--- a/blog/templates/blog/all_posts.html
+++ b/blog/templates/blog/all_posts.html
@@ -3,11 +3,27 @@
 {% block content %}
 
     <main role="main">
-
-      <div class="bg-image justify-content-center" style="background-image: url('../../static/warhol(cropped-banner).jpg');
+      <style>
+      #intro {
+        background-image: url("../../static/banners/Evening(banner).png");
         background-size: cover;
-        height: 66vh;
-      ">
+        height: 55vh;
+      }
+
+      /* Height for devices larger than 576px */
+      @media (min-width: 992px) {
+        #intro {
+          margin-top: 50px;
+        }
+      }
+
+    </style>
+
+
+
+    <!-- Background image -->
+    <div id="intro" class="bg-image">
+        <p class="display-4 text-center p-5 text-light">This is a quote, there are many like it but this one is mine!</p>
     </div>
   <!--
   <section class="jumbotron text-center bg-image" style="
