changed about page, responsive navbar, turned prod. settings back on

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -7,14 +7,6 @@
         background-size: cover;
         height: 55vh;
       }
-
-      /* Height for devices larger than 576px */
-      @media (min-width: 992px) {
-        #intro {
-          margin-top: 50px;
-        }
-      }
-
     </style>
 
 
@@ -25,9 +17,49 @@
     </div>
     <main role="main" class="container">
 
-  <div class="starter-template">
-    <h1>Bootstrap starter template</h1>
-    <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+  <div class="starter-template text-light">
+    <h1 class="text-center">"The first draft of anything is shit." -Ernest Hemingway</h1>
+    <p class="text-center">As this quote may suggest, this is the first full stack web application I have deployed.
+        Programmed in Python (Django), stored in PostgreSQL, styled in Bootstrap, and deployed on Heroku, this website currently
+        represents the culmination of my extracurricular efforts to teach myself web development. As such, it will more than
+        likely be added to and refactored over time as my skills and understanding improve.</p>
+        <br>
+      <p class="text-center">
+          The content of the website is maintained mostly for my personal use. I quite enjoyed the technical or creative writing
+          I was assigned throughout college, and as such the blog section may be a nice way to research and document some cool stuff
+          I decide to write about from time to time. The recipe section,
+          while not quite original, is simply for storing and referencing my personal creations, and being able to send them to family
+          and friends when they ask. Lastly, the best way to learn something is to teach it, likewise the
+          programming section may include programming subjects I have found enough interest or value in to exercise my creative writing
+          ability on technical topics I am attempting to teach myself.
+      </p>
+        <ul>
+            <h1>Current <em>Tacos on Mars</em> goals:</h1>
+            <li>
+                <h2>FrontEnd with Vue<i class="fab fa-vuejs"></i></h2>
+                    This might be a bit overkill for what I am going for with this place, but due to Vue's adaptability and
+                    progressive enhancement, it will be a good tool to make use of, and good practice for
+                    future more involved Javascript projects
+                </li>
+            <li>
+                <h2>Style with Tailwind</h2>
+                    I have tried my hardest to make this current iteration look distinct from your average bootstrap app,
+                    but Tailwind seems to be the most popular solution to dealing with CSS, especially while this site isn't
+                    broken down into components.
+            </li>
+            <li>
+                <h2>Backend with Go</h2>
+                    <p>Django as a "batteries included" framework comes pre-packaged with a lot of web application components and
+                    as such spoils me in terms of learning the ins-and-outs of the back end of a web app. As I develop my skills
+                    with GoLang over the course of this semester I hope to integrate some of it's lighter backend frameworks to
+                    build an application for TOM, and hopefully gain more understanding of these applications.</p>
+            </li>
+        </ul>
+      <h1 class="text-center">The emerald wallpaper</h1>
+            <a href="https://imgur.com/gallery/VZ9H2" target="_blank"><img class="img-fluid" src="../../static/text-less.png"></a>
+      <p class="text-center">
+        The banners used throughout Tacos on Mars can be found above. Taken from the opening of Pokemon Emerald and alternated for the times of day.
+    </p>
   </div>
 
 </main>
