--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,6 +6,7 @@
     <title>Tacos on Mars</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400&family=Tiro+Devanagari+Sanskrit:ital@0;1&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../../static/logo(transparent)%20(2).png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,26 +20,23 @@
     </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand navbar-dark fixed-top" style="background-color: #191919">
-  <a class="navbar-brand" href="/"><img src="../../static/logo(transparent)%20(2).png" width="50" height="50"/></a>
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #191919">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/"><img src="../../static/logo(transparent)%20(2).png" width="50" height="50"/></a>
       <h1><a href="/"  style="color: whitesmoke;text-decoration: none">TACOS ON MARS</a></h1>
-  <div class="collapse navbar-collapse  justify-content-end" id="navbarsExample02">
-    <ul class="navbar-nav">
-      <li class="nav-item">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
         <a class="nav-link" href="/posts"><i class="fa-solid fa-book"></i>Blog</a>
-      </li>
-        <li class="nav-item">
         <a class="nav-link" href="/recipes"><i class="fa-solid fa-utensils"></i>Food</a>
-      </li>
-        <li class="nav-item">
         <a class="nav-link" href="/programming"><i class="fa-solid fa-code"></i>Programming</a>
-      </li>
-        <li class="nav-item">
         <a class="nav-link" href="/about"><i class="fa-solid fa-user-astronaut"></i>About</a>
-      </li>
-    </ul>
+      </div>
+    </div>
   </div>
-</nav>
+  </nav>
     {% block content %}
 
     {% endblock %}
