--- a/recipes/templates/recipes/all_recipe_posts.html
+++ b/recipes/templates/recipes/all_recipe_posts.html
@@ -8,21 +8,14 @@
         background-size: cover;
         height: 55vh;
       }
-
-      /* Height for devices larger than 576px */
-      @media (min-width: 992px) {
-        #intro {
-          margin-top: 50px;
-        }
-      }
-
     </style>
 
 
 
     <!-- Background image -->
     <div id="intro" class="bg-image">
-        <p class="display-4 text-center p-5 text-light">This is a quote, there are many like it but this one is mine!</p>
+        <p class="display-4 text-center p-5 text-light">“I could put this on a flip-flop and it would taste good”<br>
+          <em>--Guy Fieri</em></p>
     </div>
 
         <div class="album py-5 mt-5">
