--- a/blog/templates/blog/all_posts.html
+++ b/blog/templates/blog/all_posts.html
@@ -9,21 +9,13 @@
         background-size: cover;
         height: 55vh;
       }
-
-      /* Height for devices larger than 576px */
-      @media (min-width: 992px) {
-        #intro {
-          margin-top: 50px;
-        }
-      }
-
     </style>
 
 
 
     <!-- Background image -->
     <div id="intro" class="bg-image">
-        <p class="display-4 text-center p-5 text-light">This is a quote, there are many like it but this one is mine!</p>
+        <p class="display-4 text-center p-5 text-light">"I have never let my schooling<br>interfere with my education."<br><em>--Mark Twain</em></p>
     </div>
   <!--
   <section class="jumbotron text-center bg-image" style="
