--- a/programming/templates/programming/all_programming_posts.html
+++ b/programming/templates/programming/all_programming_posts.html
@@ -8,21 +8,13 @@
         background-size: cover;
         height: 55vh;
       }
-
-      /* Height for devices larger than 576px */
-      @media (min-width: 992px) {
-        #intro {
-          margin-top: 50px;
-        }
-      }
-
     </style>
 
 
 
     <!-- Background image -->
     <div id="intro" class="bg-image">
-        <p class="display-4 text-center p-5 text-light">This is a quote, there are many like it but this one is mine!</p>
+      <p class="display-4 text-center p-5 text-dark">"In God we Trust <br> All others must bring data." <br> <em>--W. Edwards Deming</em></p>
     </div>
         <div class="album py-5 mt-5" style="background-color: #191919">
     <div class="container">
