--- a/programming/templates/programming/single_programming_post.html
+++ b/programming/templates/programming/single_programming_post.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <main role="main" class="container">
-  <div class="row">
+  <div>
     <div class="blog-main text-light mt-5">
       <hr>
       <hr>
