--- a/blog/templates/blog/single_post.html
+++ b/blog/templates/blog/single_post.html
@@ -4,10 +4,10 @@
     {% load static %}
 
     <main role="main" class="container">
-  <div class="row">
+  <div>
     <div class="blog-main text-light">
       <hr>
-      <img src="{% static post.Image %}" height="500px"/>
+      <img class="img-fluid" src="{% static post.Image %}"/>
       <hr>
 
       <div class="blog-post">
