--- a/recipes/templates/recipes/single_recipe_post.html
+++ b/recipes/templates/recipes/single_recipe_post.html
@@ -4,10 +4,10 @@
     {% load static %}
 
     <main role="main" class="container">
-  <div class="row  justify-content-center">
+  <div>
     <div class="blog-main text-light">
       <hr>
-      <img src="{% static recipe_post.Image %}" height="500px"/>
+      <img class="img-fluid" src="{% static recipe_post.Image %}"/>
       <hr>
 
       <div class="blog-post">
