Added index quote

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -13,7 +13,7 @@
 
     <!-- Background image -->
     <div id="intro" class="bg-image">
-        <p class="display-4 text-center p-5 text-light">This is a quote, there are many like it but this one is mine!</p>
+        <p class="display-4 text-center p-5 text-light">"Keep your eyes on the stars, and your feet on the ground." <br> --Teddy Roosevelt</p>
     </div>
 
   <!--Main layout-->
